# ic-kit

./: .gitignore  Cargo.toml  README.md  dfx.json
e2e/: Cargo.toml
e2e/canisters/: async.rs  reverse.rs  simple_kv_store.rs
e2e/tests/: e2e.rs
examples/: README.md  canister.rs
examples/counter/: Cargo.toml  candid.did
examples/counter/src/: canister.rs  lib.rs  main.rs
examples/factory_counter/: Cargo.toml  candid.did
examples/factory_counter/src/: canister.rs  lib.rs
examples/fib/: Cargo.toml  candid.did
examples/fib/src/: lib.rs
examples/hello/: Cargo.toml  candid.did
examples/hello/src/: canister.rs
examples/multi_counter/: Cargo.toml  candid.did
examples/multi_counter/src/: canister.rs  main.rs
examples/naming_system/: Cargo.toml  candid.did
examples/naming_system/src/: canister.rs  lib.rs
examples/pastebin/: Cargo.toml  README.md
examples/pastebin/src/: canister.rs  lib.rs
ic-kit/: Cargo.toml  README.md
ic-kit-certified/: Cargo.toml  README.md
ic-kit-certified/src/: as_hash_tree.rs  hashtree.rs  label.rs  lib.rs  rbtree.rs
ic-kit-certified/src/collections/: group.rs  map.rs  mod.rs  paged.rs  seq.rs
ic-kit-certified/src/collections/group/: builder.rs
ic-kit-certified/src/rbtree/: entry.rs  iterator.rs  test.rs
ic-kit-http/: Cargo.toml  README.md
ic-kit-http/src/: lib.rs
ic-kit-macros/: Cargo.toml  README.md
ic-kit-macros/src/: di.rs  entry.rs  export_service.rs  http.rs  lib.rs  metadata.rs  test.rs
ic-kit-management/: Cargo.toml
ic-kit-management/src/: lib.rs
ic-kit-runtime/: Cargo.toml  README.md
ic-kit-runtime/src/: call.rs  canister.rs  canister_id.rs  handle.rs  lib.rs  macros.rs  replica.rs  request.rs  spec.txt  stable.rs  types.rs  users.rs
ic-kit-stable/: Cargo.toml  README.md
ic-kit-stable/src/: allocator.rs  checksum.rs  global.rs  hole.rs  lib.rs  lru.rs  memory.rs  pointer.rs  utils.rs
ic-kit-stable/src/allocator/: allocator.rs  checksum.rs  hole.rs  mod.rs
ic-kit-stable/src/collections/btree/: map.rs  set.rs
ic-kit-stable/src/collections/btree/map/: entry.rs
ic-kit-stable/src/core/: allocator.rs  checksum.rs  copy.rs  global.rs  hole.rs  lru.rs  memory.rs  mod.rs  pointer.rs  utils.rs
ic-kit-sys/: Cargo.toml  README.md
ic-kit-sys/src/: ic0.rs  lib.rs  types.rs
ic-kit/src/: canister.rs  futures.rs  handler.rs  ic.rs  interface.rs  lib.rs  mock.rs  setup.rs  stable.rs  storage.rs  utils.rs  wasm.rs
ic-kit/src/ic/: call.rs  canister.rs  cycles.rs  mod.rs  spawn.rs  stable.rs  storage.rs
samples/counter/: Cargo.toml
samples/counter/src/: lib.rs
samples/fib/: Cargo.toml  candid.did
samples/fib/src/: lib.rs
samples/naming_system/src/: lib.rs
src/: handler.rs  ic.rs  inject.rs  interface.rs  lib.rs  mock.rs  stable.rs  wasm.rs
src/db/: alloc.rs  mod.rs  pointer.rs
src/interfaces/: management.rs  mod.rs
