[workspace]
members = [
    "e2e",
    "examples/counter",
    "examples/fib",
    "examples/multi_counter",
    "examples/naming_system",
    "ic-kit",
    "ic-kit-certified",
    "ic-kit-stable",
    "ic-kit-sys",
    "ic-kit-macros",
    "ic-kit-runtime",
]

[profile.canister-release]
inherits = "release"
debug = false
panic = "abort"
lto = true
opt-level = 'z'