[workspace]
members = [
    "e2e",
    "examples/counter",
    "examples/factory_counter",
    "examples/fib",
    "examples/multi_counter",
    "examples/naming_system",
    "ic-kit",
    "ic-kit-certified",
    "ic-kit-macros",
    "ic-kit-management",
    "ic-kit-runtime",
    "ic-kit-stable",
    "ic-kit-sys",
]

[profile.canister-release]
inherits = "release"
debug = false
panic = "abort"
lto = true
opt-level = 'z'
