[workspace]
members = [
    "examples/counter",
    "examples/factory_counter",
    "examples/fib",
    "examples/multi_counter",
    "examples/naming_system",
    "examples/pastebin",
    "ic-kit",
    "ic-kit-certified",
    "ic-kit-macros",
    "ic-kit-management",
    "ic-kit-runtime",
    "ic-kit-stable",
    "ic-kit-sys",
    "ic-kit-http",
]

[profile.canister-release]
inherits = "release"
debug = false
panic = "abort"
lto = true
opt-level = 'z'
