[package]
name = "ic-kit-certified"
version = "0.1.0-alpha.0"
edition = "2018"
description = "Certified variable friendly data structures for the Internet Computer."
authors = ["Parsa Ghadimi <i@parsa.ooo>", "Ossian Mapes <oz@fleek.co>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Psychedelic/ic-kit"
documentation = "https://docs.rs/ic-kit-certified"
homepage = "https://sly.ooo"
categories = ["data-structures"]
keywords = ["internet-computer", "canister", "fleek", "psychedelic"]
include = ["src", "Cargo.toml", "README.md"]

[dependencies]
candid = "0.7"
sha2 = "0.10.2"
serde = { version="1.0.116", features = ["derive"] }
serde_bytes = "0.11.5"
serde_cbor = "0.11.2"
hex = "0.4.3"
