[package]
name = "ic-kit-http"
version = "0.1.0-alpha.0"
edition = "2021"
authors = ["Ossian Mapes <oz@fleek.co>", "Parsa Ghadimi <i@parsa.ooo>"]
description = "IC-Kit's macros for canister development"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Psychedelic/ic-kit"
documentation = "https://docs.rs/ic-kit-http"
homepage = "https://sly.ooo"
categories = ["api-bindings"]
keywords = ["internet-computer", "canister", "fleek", "psychedelic"]
include = ["src", "Cargo.toml", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ic-kit-macros = { path = "../ic-kit-macros", features = ["http"] }
candid = "0.7"
serde = "1.0"
matchit = "0.6.0"