[package]
name = "ic-kit-macros"
version = "0.1.0-alpha.1"
edition = "2021"
authors = ["Parsa Ghadimi <i@parsa.ooo>", "Ossian Mapes <oz@fleek.co>"]
description = "IC-Kit's macros for canister development"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Psychedelic/ic-kit"
documentation = "https://docs.rs/ic-kit-macros"
homepage = "https://sly.ooo"
categories = ["api-bindings"]
keywords = ["internet-computer", "canister", "fleek", "psycedelic"]
include = ["src", "Cargo.toml", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"
syn = "1.0"
serde = "1.0"
serde_tokenstream = "0.1"
lazy_static = "1.4"

[lib]
proc-macro = true
