[package]
name = "ic-kit-runtime"
version = "0.1.0-alpha.2"
edition = "2021"
authors = ["Parsa Ghadimi <i@parsa.ooo>", "Ossian Mapes <oz@fleek.co>"]
description = "IC-Kit's Canister Simulator"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Psychedelic/ic-kit"
documentation = "https://docs.rs/ic-kit-runtime"
homepage = "https://sly.ooo"
categories = ["api-bindings", "development-tools::testing"]
keywords = ["internet-computer", "canister", "fleek", "psychedelic"]
include = ["src", "Cargo.toml", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.0.0"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
ic-kit-sys = { path = "../ic-kit-sys", version = "0.1.3" }
ic-types = "0.6"
tokio = { version = "1.20", features = ["sync", "macros", "rt"] }
thread-local-panic-hook = "0.1.0"
lazy_static = "1.4"
memmap = "0.7.0"
futures = "0.3"
actix = "0.13"
candid = "0.8"
serde = "1.0"
