[package]
name = "ic-kit-stable"
version = "0.1.0-alpha.0"
edition = "2021"
authors = ["Parsa Ghadimi <i@parsa.ooo>", "Ossian Mapes <oz@fleek.co>"]
description = "IC-Kit's data structures living on the stable storage."
license = "MIT"
readme = "README.md"
repository = "https://github.com/Psychedelic/ic-kit"
documentation = "https://docs.rs/ic-kit-stable"
homepage = "https://sly.ooo"
categories = ["data-structures"]
keywords = ["internet-computer", "canister", "fleek", "psychedelic"]
include = ["src", "Cargo.toml", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ic-kit = {path="../ic-kit", version="0.5.0-alpha.1"}
ic-kit-certified = {path="../ic-kit-certified", version="0.1.0-alpha.0"}

[features]
experimental-stable64 = ["ic-kit/experimental-stable64"]
