[package]
name = "ic-kit-sys"
version = "0.1.3"
edition = "2021"
authors = ["Parsa Ghadimi <i@parsa.ooo>", "Ossian Mapes <oz@fleek.co>"]
description = "IC-Kit's API bindings to the Internet Computer's WASM runtime."
license = "MIT"
readme = "README.md"
repository = "https://github.com/Psychedelic/ic-kit"
documentation = "https://docs.rs/ic-kit-sys"
homepage = "https://sly.ooo"
categories = ["api-bindings", "development-tools::testing"]
keywords = ["internet-computer", "canister", "fleek", "psycedelic"]
include = ["src", "Cargo.toml", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(not(target_family = "wasm"))'.dependencies]
tokio = {version="1.20", features=["sync"]}
futures = {version="0.3"}