[package]
name = "ic_kit_example_factory_counter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ic-kit = {path="../../ic-kit"}
ic_kit_example_counter = {path="../counter"}

[features]
kit-wasm-export = []

[lib]
crate-type = ["cdylib", "lib"]
