[package]
name = "ic_kit_example_counter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ic-kit = {path="../../ic-kit"}
ic-kit-sys = {path="../../ic-kit-sys"}

[target.'cfg(not(target_family = "wasm"))'.dependencies]
tokio = {version="1.20", features=["sync", "rt"]}

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"
